fix figure tag, add image container, add slide-footer, jumping images...

--- a/css/style.css
+++ b/css/style.css
@@ -59,19 +59,25 @@ li{
 }
 
 
-figure{
-    margin-top: 6rem;
-    margin-bottom: 1.0rem; 
+.photos-container{
+    margin-top: 1rem;
+    height: 15rem;
+    position: relative;
+
 }
 
+.slides-navi{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
 img{
+    position: absolute;
+    left: 0;
+    bottom: 0;
     width: 100%;
 }
 
-
-.text{
-    margin-bottom: 0.5rem;
-}
 
 .button{
     background-color: white; 
@@ -86,15 +92,6 @@ img{
     width: 1rem;
     outline: 0;
     margin-top: -0.1rem;
-}
-
-.button-left{
-float: right;
-}
-
-.button-right{
-  float: right;
-  margin-right: 10px;
 }
 
 
@@ -115,46 +112,24 @@ float: right;
         margin-top: 1.5rem;
     }
 
-    /* footer{
-        display: none;
-    } */
-
-    figure{
+    .photos-container{
         margin-top: 2rem;
         grid-column: 2/2;
         -ms-grid-column: 2/2;
         grid-row: 1/2;
         -ms-grid-row: 1/2; 
-    }  
-    
-    .text{
+        height: 29rem;
+        width: 100%;
+        overflow: hidden;
+    } 
+    img{
+        top: 0;
+    }
+    .slides-navi{
         grid-column: 2/2;
         -ms-grid-column: 2/2;
         grid-row: 2/2;
         -ms-grid-row: 2/2;
     }
-
-    .button{
-      position: relative;
-      margin-top: -1rem;
-    }
-
-    .button-right{
-        grid-column: 2/2;
-        -ms-grid-column: 2/2;
-        grid-row: 2/2;
-        -ms-grid-row: 2/2;
-        position: relative;
-        margin-left: 580px;
-    }
-
-    .button-left{
-        grid-column: 2/2;
-        -ms-grid-column: 2/2;
-        grid-row: 2/2;
-        -ms-grid-row: 2/2;
-        margin-left: 620px;
-    }
-
 
 }
